# MosObserver

./: .gitignore  README.md  organizations.json  pyproject.toml  requirements.txt
mosobserver/: __init__.py  main.py
mosobserver/database/: connector.py
mosobserver/database/models/: __init__.py  portal.py
mosobserver/notifier/: tlgrm.py
mosobserver/notifier/telegram/: __init__.py  authorization.py  client.py
mosobserver/portal/: client.py  poller.py
mosobserver/portal/models/: documents.py
tests/: test_mosobserver.py
